--- a/config.yml
+++ b/config.yml
@@ -7,8 +7,10 @@ server:
   virtualization_type: hvm
   min_count: 1
   max_count: 1
-  subnet: subnet-009fa557fc8d836d3
-  security_group: sg-02e651643beaaf4e7
+  network:
+    subnet: subnet-009fa557fc8d836d3
+    security_groups:
+      - sg-08f26d1dcf8f63011
   volumes:
     - device: /dev/xvda
       size_gb: 10
