Moved key_pair and private_ip_address to config.yml.

--- a/config.yml
+++ b/config.yml
@@ -2,12 +2,11 @@
 server:
   instance_type: t2.micro
   ami_type: ami-0cf6f5c8a62fa5da6
-  architecture: x86_64
-  root_device_type: ebs
-  virtualization_type: hvm
   min_count: 1
   max_count: 1
+  key_pair: ec2-keypair
   network:
+    private_ip_address: 10.255.6.194
     subnet: subnet-009fa557fc8d836d3
     security_groups:
       - sg-08f26d1dcf8f63011
